📻🏃 Checkpoint ./config.json:34984626/268 ./Music/leave.js:34984626/2260 ./others/invite.js:34984626/507 ./index.js:34984626/6044

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "TOKEN": "xxxxxxx",
-  "PREFIX": "h!",
+  "TOKEN": "ODg1NDQzNTc4MTk5OTMyOTI4.YTnHlw.-MtaAJywMGnIaX8k_rttKjLDdf8",
+  "PREFIX": "!!",
   "approveemoji": "✅",
   "denyemoji": "🚫",
   "erroremoji": "️❗"
